--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <main>
+      <h1>
+        PLAYER: <span id="player"></span>
+      </h1>
       <table>
         <tbody id="board"></tbody>
       </table>
