--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -14,6 +14,7 @@
       <table>
         <tbody id="board"></tbody>
       </table>
+      <h2 id="result"></h2>
     </main>
 
     <template id="row">
