--- a/todo/index.html
+++ b/todo/index.html
@@ -22,9 +22,9 @@
     </template>
 
     <template id="project">
-      <a class="project" data-link="/projects">
-        <h3 class="project__title"></h3>
-        <p class="project__desc"></p>
+      <a class="project" data-link="/project">
+        <h3 class="project__title" data-link="/project"></h3>
+        <p class="project__desc" data-link="/project"></p>
       </a>
     </template>
 
