--- a/todo/index.html
+++ b/todo/index.html
@@ -9,22 +9,22 @@
   <body>
     <div id="app"></div>
 
-    <template id="projects-form">
-      <form class="projects-form">
+    <template id="todo-form">
+      <form class="todo-form">
         <input type="text" name="title" placeholder="TITLE" required>
-        <textarea placeholder="DESCRIPTION"></textarea>
+        <textarea name="desc" placeholder="DESCRIPTION"></textarea>
         <button type="submit">SUBMIT</button>
       </form>
     </template>
 
-    <template id="projects-wrapper">
-      <div class="projects-wrapper"></div>
+    <template id="todo-wrapper">
+      <div class="todo-wrapper"></div>
     </template>
 
-    <template id="project">
-      <a class="project" data-link="/project">
-        <h3 class="project__title" data-link="/project"></h3>
-        <p class="project__desc" data-link="/project"></p>
+    <template id="todo">
+      <a class="todo" data-link="/todo">
+        <h3 class="todo__title" data-link="/todo"></h3>
+        <p class="todo__desc" data-link="/todo"></p>
       </a>
     </template>
 
