--- a/todo/index.html
+++ b/todo/index.html
@@ -22,9 +22,9 @@
     </template>
 
     <template id="todo">
-      <a class="todo" data-link="/todo">
-        <h3 class="todo__title" data-link="/todo"></h3>
-        <p class="todo__desc" data-link="/todo"></p>
+      <a class="todo">
+        <h3 class="todo__title"></h3>
+        <p class="todo__desc"></p>
       </a>
     </template>
 
