--- a/todo/index.html
+++ b/todo/index.html
@@ -28,6 +28,17 @@
       </a>
     </template>
 
+    <template id="todo-page">
+      <header class="todo-header">
+        <a data-link="/">BACK</a>
+        <button>DELETE</button>
+      </header>
+      <div>
+        <h2></h2>
+        <p></p>
+      </div>
+    </template>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
